# ephemeral-sandbox-console

./: .gitattributes  .gitignore  Cargo.toml  IMPLEMENTATION_PROMPT.md  LICENSE  MIGRATION_SPEC.md  README.md
.github/workflows/: ci.yml
desktop/: PHASE_1_MAIN_PAGE_SPEC.md  README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: main.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
docs/: polling-contract.md  workspace-process-topology.md
server/: Cargo.toml  README.md
server/src/: assets.rs  auth.rs  catalog.rs  config.rs  config_schema.rs  daemon_api.rs  endpoint.rs  gateway_control.rs  health.rs  lib.rs  main.rs  proxy.rs  response.rs  router.rs  rpc.rs  sandbox_clusters.rs  server.rs  state.rs
server/tests/: config_schema.rs  console.rs  proxy_security.rs
server/tests/console/: assets.rs  bootstrap.rs  catalog.rs  config.rs  daemon_api.rs  gateway_control.rs  health.rs  proxy.rs  rpc.rs  sandbox_clusters.rs  server.rs
server/tests/support/: mod.rs
shared/assets/: manifest.json
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.tsbuildinfo  vite.config.ts  vitest.config.ts
web/scripts/: assets.mjs
web/src/: App.tsx  AppProviders.tsx  index.css  main.tsx  theme.ts
web/src/api/: catalog.ts  files.ts  gateway.ts  health.ts  hostResources.ts  http.ts  observability.ts  rpc.ts  types.ts
web/src/components/: ConfirmDestroyDialog.tsx  DestroyAction.tsx  ErrorToast.tsx  HealthDot.tsx  PortPreview.tsx  RemoveClusterAction.tsx  ResourceSparkline.tsx  SquashDialog.tsx  StateBadge.tsx  StreamLogPane.tsx
web/src/config/: brand.ts
web/src/core/: activity.ts  daemonCaptureStore.ts  daemonMetrics.ts  fleet.ts  resources.ts  sandboxClusters.ts  status.ts
web/src/lib/: format.ts  sparkHistory.ts  terminalText.ts
web/src/pages/: NotFound.tsx
web/src/poll/: useFleetCurrentUsage.ts  useFleetSnapshots.ts  usePoll.ts  useProcessTopology.ts  useSandboxSnapshot.ts
web/src/shell/: Shell.module.css  Shell.tsx
web/tests/: AssetPipeline.test.ts  ViteProxy.test.ts
web/tests/browser/: MantineCompatibilitySpike.spec.ts  P01ThemeFixture.spec.ts  P02FoundationFixture.spec.ts  P03PrimitivesFixture.spec.ts  P04ShellNavigation.spec.ts  P05FleetFixture.spec.ts  P06TerminalFixture.spec.ts  P07ObservabilityFixture.spec.ts  P08FilesFixture.spec.ts  P08PreviewFixture.spec.ts  P09RadixRemovalFixture.spec.ts  P12CrossBrowserSentinel.spec.ts  PollingFixture.spec.ts  RouteAtlasFixture.spec.ts  TrustFixture.spec.ts  atlas.ts  performance.ts
web/tests/core/: activity.test.ts  brand.test.ts  daemonMetrics.test.ts  fleet.test.ts  resources.test.ts  sandboxClusters.test.ts  status.test.ts
web/tests/p00/: MantineCompatibilitySpike.test.tsx  MantineCompatibilitySpike.tsx  MantineCompatibilitySpikeImport.test.ts  MantineCompatibilitySpikeRender.test.tsx  MantineImportSmoke.test.ts  MantineRenderSmoke.test.tsx  P01ThemeFixture.tsx  P02FoundationFixture.tsx  P03PrimitivesFixture.tsx  P05FleetFixture.tsx  P06TerminalFixture.tsx  P07ObservabilityFixture.tsx  P08FilesFixture.tsx  atlas-fixture.tsx  atlas.html  fixture.tsx  index.html  mantine-compatibility-spike.css  p01-theme-fixture.module.css  p01-theme.html  p02-foundation-fixture.module.css  p02-foundation.html  p03-primitives-fixture.module.css  (+12 more)
(+75 files in other folders)
