[workspace]
resolver = "2"
members = ["server", "desktop/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "Apache-2.0"

[workspace.dependencies]
bytes = "1"
clap = { version = "4", features = ["derive", "env"] }
http = "1"
http-body-util = "0.1"
hyper = { version = "1", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", default-features = false, features = ["v4"] }

sandbox-config = { git = "https://github.com/Ephemeral-AI-Lab/ephemeral-sandbox.git", rev = "ac09a1b301ded01ee3813dc31920c0388d322563" }
sandbox-operation-catalog = { git = "https://github.com/Ephemeral-AI-Lab/ephemeral-sandbox.git", rev = "ac09a1b301ded01ee3813dc31920c0388d322563", default-features = false }
sandbox-operation-client = { git = "https://github.com/Ephemeral-AI-Lab/ephemeral-sandbox.git", rev = "ac09a1b301ded01ee3813dc31920c0388d322563" }
sandbox-operation-contract = { git = "https://github.com/Ephemeral-AI-Lab/ephemeral-sandbox.git", rev = "ac09a1b301ded01ee3813dc31920c0388d322563" }

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
unwrap_used = "warn"
dbg_macro = "warn"
undocumented_unsafe_blocks = "deny"

[workspace.lints.rust]
unused_must_use = "warn"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[profile.package-fast]
inherits = "release"
opt-level = 1
lto = false
codegen-units = 256
incremental = true

[profile.package-local]
inherits = "release"
opt-level = 0
lto = false
codegen-units = 256
incremental = true
debug = 0
strip = true
