[package]
name = "sandbox-console"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "sandbox-console"
path = "src/main.rs"

[dependencies]
bytes.workspace = true
clap.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
sandbox-cli.workspace = true
sandbox-config.workspace = true
sandbox-manager-operations.workspace = true
sandbox-observability-operations.workspace = true
sandbox-protocol.workspace = true
sandbox-runtime-operations.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
