[package]
name = "ephemeral-sandbox-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "ephemeral_sandbox_desktop"
path = "src/lib.rs"

[[bin]]
name = "ephemeral-sandbox"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
sandbox-console = { path = "../../server" }
tauri = { version = "2.11.4", features = [] }
tokio.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
